added new personas

--- a/client/index.html
+++ b/client/index.html
@@ -20,13 +20,13 @@
       crossorigin="anonymous"
     ></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <!-- <meta name="apple-mobile-web-app-capable" content="yes" /> -->
 
     <meta
       name="apple-mobile-web-app-status-bar-style"
       content="black-translucent"
     />
-
+    <meta name="apple-mobile-web-app-capable" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="MUSE | A.I assistant" />
 
     <title>MUSE | A.I. assistant</title>
